tests/NormalTests/paczka2/big_fuzzy/85882095.err
Error in line 3: JU3ps S313 9,3
Error in line 4: JU3ps S769 42,4
Error in line 17: JU3ps S769 51,5
Error in line 20: JU3ps A567 80,3
Error in line 26: A7Rtr S313 92,8
Error in line 23: A567 S769 13,2
Error in line 33: PgWmO70Hji S769 62,7
Error in line 31: JU3ps A567 67,8
Error in line 27: A7Rtr S598 8,5
Error in line 37: JU3ps S598 39,7
Error in line 36: PgWmO70Hji S313 78,7
Error in line 53: o4GqJv4MdV A567 93,9
Error in line 54: JU3ps S598 1,3
Error in line 61: JU3ps A567 19,4
Error in line 74: JU3ps S598 49,1
Error in line 75: JU3ps S769 40,6
Error in line 76: JU3ps A567 91,7
Error in line 84: JU3ps S769 50,5
Error in line 88: 8uHhOb04jL S313 84,4
Error in line 104: A567 S598 72,6
Error in line 108: PgWmO70Hji S313 48,9
Error in line 119: PgWmO70Hji A567 0,1
Error in line 124: YW7HjoQU5 S313 97,3
Error in line 126: 8uHhOb04jL S769 55,3
Error in line 132: 8uHhOb04jL A567 49,6
Error in line 118: o4GqJv4MdV S313 113,8
Error in line 134: o4GqJv4MdV S598 15,6
Error in line 128: YW7HjoQU5 S769 32,9
Error in line 139: YW7HjoQU5 S598 52,0
Error in line 135: PgWmO70Hji S313 56,1
Error in line 148: o4GqJv4MdV A567 31,1
Error in line 145: 8uHhOb04jL A567 56,2
Error in line 160: 8uHhOb04jL S313 60,0
Error in line 164: YW7HjoQU5 S769 89,0
Error in line 163: 8uHhOb04jL S598 48,7
Error in line 177: JU3ps S313 10,7
Error in line 191: A567 A567 126,0
Error in line 184: o4GqJv4MdV A567 100,0
Error in line 195: A567 S769 88,8
Error in line 213: PgWmO70Hji S598 75,1
Error in line 227: 8uHhOb04jL S598 18,1
Error in line 206: A7Rtr S769 55,8
